Removed JUnit 4 dependency, removed Circle build file (uses Travis)